testdata/golden/sema/valid/entrypoint/return_erring.fmt
// Test: @entrypoint returning Erring<int, Error> is valid (has __to(int))
@entrypoint
fn main() -> int! {
    return Success(0);
}
