testdata/golden/sema/invalid/concurrency/channel_nosend_value.fmt
// Test: cannot send @nosend type through channel

@nosend
type ThreadLocal = {
    data: int,
};

fn try_send_nosend(ch: &Channel<ThreadLocal>, value: ThreadLocal) -> nothing {
    // Should error: cannot send @nosend type through channel
    ch.send(value);
}
